--- a/.github/workflows/api-ci.yaml
+++ b/.github/workflows/api-ci.yaml
@@ -7,7 +7,8 @@ on:
     paths:
       - .github/workflows/api-ci.yaml
       - .github/workflows/shared-app-ci-workflow.yaml
-      - src/Teams.Notifications.Api/**
+      - charts/**
+      - src/**
 
 permissions:
   id-token: write
