First cleanup step!

--- a/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
+++ b/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
@@ -2,6 +2,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>preview</LangVersion>
+		<Nullable>enable</Nullable>
 		<OutputItemType>Analyzer</OutputItemType>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
