--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -33,6 +33,7 @@
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
+		<PackageReference Include="Microsoft.ApplicationInsights.Kubernetes" Version="*" />
 		<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
