--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -1,57 +1,58 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
-		<LangVersion>preview</LangVersion>
-		<Nullable>enable</Nullable>
-		<NoWarn>$(NoWarn);SKEXP0010;1591</NoWarn>
-		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<!-- Tells the compiler to show the files from Teams.Notifications.AdaptiveCardGen This is useful for debugging purposes -->
-		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-		<CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
-	</PropertyGroup>
-	<Target Name="RunFormatter" AfterTargets="Build">
-		<Exec Command="dotnet run --project ../Teams.Notifications.Formatter -- format" />
-	</Target>
-	<ItemGroup>
-		<!-- Tells the compiler to ignore the generated files when compiling the project (it will still be part of the compilation) -->
-		<Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
-		<None Include="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="AdaptiveCards" Version="*" />
-		<PackageReference Include="OpenTelemetry" Version="*" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="*" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="*" />
-		<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="*" />
-		<PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="*" />
-		<PackageReference Include="OpenTelemetry.Exporter.Console" Version="*" />
-		<PackageReference Include="Microsoft.Identity.Web" Version="*" />
-		<PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
-		<PackageReference Include="Azure.Identity" Version="*" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="*" />
-		<PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*-*" />
-		<PackageReference Include="Microsoft.Agents.Builder" Version="*-*" />
-		<PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />
-		<PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*-*" />
-		<PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*-*" />
-		<PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="*" />
-		<PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
-		<PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
-		<PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
-		<PackageReference Include="Microsoft.ApplicationInsights.Kubernetes" Version="*" />
-		<PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
-		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
-		<PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
-		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" OutputItemType="Analyzer" />
-		<AdditionalFiles Include="Templates\**\*.json" />
-	</ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
+    <Nullable>enable</Nullable>
+    <NoWarn>$(NoWarn);SKEXP0010;1591</NoWarn>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <!-- Tells the compiler to show the files from Teams.Notifications.AdaptiveCardGen This is useful for debugging purposes -->
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+  </PropertyGroup>
+  <Target Name="RunFormatter" AfterTargets="Build">
+    <Exec Command="dotnet run --project ../Teams.Notifications.Formatter -- format" />
+  </Target>
+  <ItemGroup>
+    <!-- Tells the compiler to ignore the generated files when compiling the project (it will still be part of the compilation) -->
+    <Compile Remove="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+    <None Include="$(CompilerGeneratedFilesOutputPath)/**/*.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AdaptiveCards" Version="*" />
+    <PackageReference Include="OpenTelemetry" Version="*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="*" />
+    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="*" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="*" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="*" />
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
+    <PackageReference Include="Azure.Identity" Version="*" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*-*" />
+    <PackageReference Include="Microsoft.Agents.Builder" Version="*-*" />
+    <PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />
+    <PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*-*" />
+    <PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*-*" />
+    <PackageReference Include="Microsoft.ApplicationInsights.WorkerService" Version="*" />
+    <PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
+    <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
+    <PackageReference Include="Microsoft.ApplicationInsights.Kubernetes" Version="*" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
+    <PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
+    <ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj"
+                      OutputItemType="Analyzer" />
+    <AdditionalFiles Include="Templates\**\*.json" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<Folder Include="Generated\" />
-	</ItemGroup>
+  <ItemGroup>
+    <Folder Include="Generated\" />
+  </ItemGroup>
 
 </Project>
