more loging aournd the card

--- a/src/Teams.Notifications.Api/Templates/LogicAppError.json
+++ b/src/Teams.Notifications.Api/Templates/LogicAppError.json
@@ -58,7 +58,7 @@
         "PostFileStream": "{{FileUrl:file?}}",
         "PostSuccessMessage": "Sent the file to frontgate for reprocessing!"
       },
-      "verb": "process",
+      "verb": "Process",
       "title": "🔁 Reprocess File"
     },
     {
