less logging and clenaup

--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -1,13 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
+      // Set default log level to Information
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
-    },
-    "ApplicationInsights": {
-      "LogLevel": {
-        "Default": "Information"
-      }
+      // Only log warnings or above from ASP.NET Core to reduce noise
+      "Microsoft.AspNetCore": "Warning",
+      // Loads of Microsoft.Agents.Authentication.Msal logs, useless noise when debugging, activate when agent auth isn't working
+      "Microsoft.Agents.Authentication.Msal": "Warning"
     }
   },
   "AllowedHosts": "*",
