--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -3,10 +3,10 @@
     "LogLevel": {
       // Set default log level to Information
       "Default": "Information",
-      // Only log warnings or above from ASP.NET Core to reduce noise
-      "Microsoft.AspNetCore": "Warning",
-      // Loads of Microsoft.Agents.Authentication.Msal logs, useless noise when debugging, activate when agent auth isn't working
-      "Microsoft.Agents.Authentication.Msal": "Warning"
+      // Only log warnings from MS
+      "Microsoft": "Warning",
+      // Azure.Identity also posts a lot of info level logs
+      "Azure.Identity": "Warning"
     }
   },
   "AllowedHosts": "*",
