--- a/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
+++ b/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
@@ -11,11 +11,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" />
-		<PackageReference Include="Community.Extensions.Spectre.Cli.Hosting" Version="*" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.*" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.*" />
-		<PackageReference Include="Spectre.Console.Cli" Version="0.49.1" />
-		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj"/>
+		<PackageReference Include="Spectre.Console.Cli" Version="*" />
+		<ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,7 +22,6 @@
 		<Using Include="System.Text.Encodings.Web" />
 		<Using Include="System.Text.Json" />
 		<Using Include="System.Text.Json.Serialization" />
-		<Using Include="Community.Extensions.Spectre.Cli.Hosting" />
 		<Using Include="Microsoft.Extensions.Configuration" />
 		<Using Include="Microsoft.Extensions.DependencyInjection" />
 		<Using Include="Microsoft.Extensions.Hosting" />
