--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -46,6 +46,8 @@
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
+    <packageReference Include="OpenTelemetry.Resources.Container" Version="*-*" />
+    <PackageReference Include="OpenTelemetry.Resources.Host" Version="*-*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
