--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -51,7 +51,7 @@
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
     <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="*" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="*" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
