--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      // Set default log level to Information
       "Default": "Information",
+      "Microsoft": "Information",
       // Azure.Identity also posts a lot of info level logs
       "Azure.Identity": "Warning"
     }
