temp activate all the logging

--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -1,10 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Information",
-      // Azure.Identity also posts a lot of info level logs
-      "Azure.Identity": "Warning"
+      "Default": "Information"
+
     }
   },
   "AllowedHosts": "*",
