AB#78934 Add adatpive GET endpoint, better integration tests and openapi instead of swagger! (#37)
AB#78934 Add adatpive GET endpoint, better integration tests and openapi instead of swagger!

--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -1,10 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      // Set default log level to Information
       "Default": "Information",
-      // Azure.Identity also posts a lot of info level logs
-      "Azure.Identity": "Warning"
+      "Microsoft": "Warning"
     }
   },
   "AllowedHosts": "*",
