--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -20,41 +20,19 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="*" />
-    <!-- START OpenTelemetry-->
-    <!--for aspnet core api, to filter /health, AddAspNetCoreInstrumentation-->
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="*" />
-    <!--for http traffic, AddHttpClientInstrumentation-->
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="*" />
-    <!--for the runtime itself , AddRuntimeInstrumentation-->
-    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="*" />
-    <!--to sent it to app insights-->
-    <PackageReference Include="Azure.Monitor.OpenTelemetry.Exporter" Version="*" />
-    <!--local debug, to sent it to console-->
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="*" />
-    <!--azure app insight-->
-    <PackageReference Include="Azure.Monitor.OpenTelemetry.AspNetCore" Version="*" />
-    <!--AddContainerDetector-->
-    <packageReference Include="OpenTelemetry.Resources.Container" Version="*-*" />
-    <!-- AddHostDetector-->
-    <PackageReference Include="OpenTelemetry.Resources.Host" Version="*-*" />
-    <!-- END OpenTelemetry-->
     <PackageReference Include="Microsoft.Identity.Web" Version="*" />
     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="*" />
     <PackageReference Include="Azure.Identity" Version="*" />
-    <PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*-*" />
-    <PackageReference Include="Microsoft.Agents.Builder" Version="*-*" />
-    <PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*-*" />
-    <PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*-*" />
-    <PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*-*" />
-    <PackageReference Include="Microsoft.SemanticKernel.Agents.AzureAI" Version="*-*" />
-    <PackageReference Include="Microsoft.SemanticKernel.Agents.Core" Version="*" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.AzureOpenAI" Version="*" />
-    <PackageReference Include="Microsoft.SemanticKernel.Connectors.OpenAI" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Authentication.Msal" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Builder" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Extensions.Teams" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Builder.Dialogs" Version="*" />
+    <PackageReference Include="Microsoft.Agents.Hosting.AspNetCore" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.*" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
-    <PackageReference Include="Microsoft.Graph.Beta" Version="5.*-*" />
+    <PackageReference Include="Microsoft.Graph.Beta" Version="*-*" />
     <ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" OutputItemType="Analyzer" />
     <ProjectReference Include="..\Telemetry\Telemetry.csproj" />
     <AdditionalFiles Include="Templates\**\*.json" />
