--- a/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
+++ b/src/Teams.Notifications.Formatter/Teams.Notifications.Formatter.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdaptiveCards" Version="*" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.*" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.*" />
     <PackageReference Include="Spectre.Console.Cli" Version="*" />
   </ItemGroup>
