Add telementry package to api

--- a/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
+++ b/src/Teams.Notifications.Api/Teams.Notifications.Api.csproj
@@ -33,8 +33,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*" />
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="*" />
     <PackageReference Include="Microsoft.Graph.Beta" Version="*-*" />
+    <PackageReference Include="Uniphar.Platform.Telemetry" Version="*" />
     <ProjectReference Include="..\Teams.Notifications.AdaptiveCardGen\Teams.Notifications.AdaptiveCardGen.csproj" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\Telemetry\Telemetry.csproj" />
     <AdditionalFiles Include="Templates\**\*.json" />
   </ItemGroup>
 
