--- a/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
+++ b/src/Teams.Notifications.AdaptiveCardGen/Teams.Notifications.AdaptiveCardGen.csproj
@@ -18,8 +18,8 @@
 	<ItemGroup>
 		<PackageReference Include="AdaptiveCards" Version="*" GeneratePathProperty="true" PrivateAssets="all" />
 		<PackageReference Include="Newtonsoft.Json" Version="*" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.Text.Json" Version="9.*" GeneratePathProperty="true" PrivateAssets="all" />
-		<PackageReference Include="System.IO.Pipelines" Version="9.*" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.Text.Json" Version="10.*" GeneratePathProperty="true" PrivateAssets="all" />
+		<PackageReference Include="System.IO.Pipelines" Version="10.*" GeneratePathProperty="true" PrivateAssets="all" />
 
 	</ItemGroup>
 	<PropertyGroup>
@@ -28,14 +28,10 @@
 
 	<Target Name="GetDependencyTargetPaths">
 		<ItemGroup>
-			<TargetPathWithTargetPlatformMoniker Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\Newtonsoft.Json.dll"
-			                                     IncludeRuntimeDependency="false" />
-			<TargetPathWithTargetPlatformMoniker Include="$(PkgAdaptiveCards)\lib\netstandard2.0\AdaptiveCards.dll"
-			                                     IncludeRuntimeDependency="false" />
-			<TargetPathWithTargetPlatformMoniker Include="$(PkgSystem_Text_Json)\lib\netstandard2.0\System.Text.Json.dll"
-			                                     IncludeRuntimeDependency="false" />
-			<TargetPathWithTargetPlatformMoniker Include="$(PkgSystem_IO_Pipelines)\lib\netstandard2.0\System.IO.Pipelines.dll"
-			                                     IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgNewtonsoft_Json)\lib\netstandard2.0\Newtonsoft.Json.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgAdaptiveCards)\lib\netstandard2.0\AdaptiveCards.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgSystem_Text_Json)\lib\netstandard2.0\System.Text.Json.dll" IncludeRuntimeDependency="false" />
+			<TargetPathWithTargetPlatformMoniker Include="$(PkgSystem_IO_Pipelines)\lib\netstandard2.0\System.IO.Pipelines.dll" IncludeRuntimeDependency="false" />
 		</ItemGroup>
 	</Target>
 
