Make it possible to locally debug again

--- a/src/Teams.Notifications.Api/appsettings.json
+++ b/src/Teams.Notifications.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "APPLICATIONINSIGHTS": {
+    "CONNECTIONSTRING": "InstrumentationKey=your_instrumentation_key;IngestionEndpoint=https://your_ingestion_endpoint"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
