add teams app id

--- a/src/Teams.Notifications.Api/appsettings.local.json
+++ b/src/Teams.Notifications.Api/appsettings.local.json
@@ -4,5 +4,7 @@
   "AZURE_CLIENT_ID": "c911e027-3cbc-4614-9f2e-872c20b8f4b2",
   "AZURE_TENANT_ID": "8421dd92-337e-4405-8cfc-16118ffc5715",
   "AZURE_AUTHORITY_HOST": "https://login.microsoftonline.com",
-  "ClientSecret": "CHANGE_ME"
+  "ClientSecret": "CHANGE_ME",
+  // never really changes
+  "TEAMS_APP_ID": "1bbe22ab-6475-4503-83c7-0e2db2da3a4d"
 }
