--- a/.github/workflows/shared-app-deployment-workflow.yaml
+++ b/.github/workflows/shared-app-deployment-workflow.yaml
@@ -90,7 +90,7 @@ jobs:
             try{
               Import-Module .\devops-azure\src\Uniphar.DevOps.psd1 -ErrorAction Stop -Force
               
-              $AKSClusterServiceAccountClientId = (Get-UniDomainServicePrincipalDetail 'devops' '${{ inputs.environment }}').AppId
+              $AKSClusterServiceAccountClientId = (Get-UniDomainServicePrincipalDetail 'platform-teams-notification-api' '${{ inputs.environment }}').AppId
               $AzureEntraExternalTenantId = Resolve-UniEntraExternalTenantId -Environment '${{ inputs.environment }}'
               
               echo "AKS_CLUSTER_SERVICE_ACCOUNT_CLIENT_ID=$AKSClusterServiceAccountClientId" >> $env:GITHUB_ENV
@@ -149,5 +149,5 @@ jobs:
           --set reason="Upgrade to $APPLICATION_VERSION"
           --set-string AKSClusterServiceAccountClientId="$AKS_CLUSTER_SERVICE_ACCOUNT_CLIENT_ID"
           --set-string AzureEntraExternalTenantId="$AZURE_ENTRA_EXTERNAL_TENANT_ID"
-          -n devops
+          -n platform-teams-notification-api
           --atomic
