better readme and c leanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "json.schemas": [
     {
-      "fileMatch": ["/src/**/*.json"],
+      "fileMatch": ["/src/Teams.Notifications.Api/appManifest/**/*.json"],
       "url": "https://developer.microsoft.com/en-us/json-schemas/teams/v1.23/MicrosoftTeams.schema.json"
     }
   ]
